--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <p>Spaghetti Aglio e Olio – quick, tasty, and classic</p>
     </header>
      <main class="wrapper">
+      <section class="hero-image">
+  <img src="david recipe image.jpg" alt="Chef David's Spaghetti Delight">
+</section>
+
     <section class="ingredients">
       <h2>Ingredients</h2>
       <ul>
